--- a/index.html
+++ b/index.html
@@ -201,7 +201,36 @@
                 <a onclick="toggle_visibility('6');">
                     <i>Topology and number theory</i></a><br />
                 <div id="6" class="toshow" style="display:none">
-                    TBA
+                    Number theory is the study of completely discrete things that can be 
+                    counted or numbered, while topology is the study of continuous things
+                    and of properties that are not changed by deformation.  So it is
+                    perhaps surprising that questions of pure topology lead to surprisingly
+                    subtle questions of number theory.   In this talk I will sketch several
+                    instances of this phenomenon, starting with Euler's discovery that a
+                    discrete invariant (now called the Euler characteristic) of a
+                    topological space can be computed by triangulating it any way, and then
+                    move on to more sophisticated examples: the "Betti numbers" of a
+                    manifold (roughly speaking, the number of k-dimensional "holes"  for
+                    each integer k up to the dimension of the manifold), the appearance of
+                    Bernoulli numbers in connection with so-called exotic spheres in higher
+                    dimensions, the appearance of Dedekind sums (another simple
+                    number-theoretical object going back to the 19th century) in the study
+                    of 4-dimensional manifolds, and most recently a whole series of
+                    discoveries relating "quantum invariants" of knots to various deep
+                    number-theoretical concepts (units, K-theory, Bloch groups, Habiro
+                    ring,...). This last is ongoing research in collaboration with Stavros
+                    Garoufalidis in SUSTech. The talk will be at a very general level and
+                    will not require any prior knowledge.  In particular, rough
+                    explanations of all of the various technical words occurring above will
+                    be given. 
+                    
+                    In the Math Center seminar talk that I will give on December 6, I will
+                    tell more about one of the specific questions appearing above, namely,
+                    the question of the possible Betti numbers that can occur for smooth
+                    n-dimensional manifolds.  The answer here turns out to involve
+                    elementary but quite hard number theory, and is quite amusing.  This
+                    talk, too, is meant to be understandable by good undergraduates or by
+                    mathematicians in all fields.
                 </div>
             </p>
 
@@ -209,19 +238,15 @@
                 <a href="https://icm.sustech.edu.cn/" target="_blank">SUSTech International Center for Mathematics</a>), 
                 <b><a href="https://people.mpim-bonn.mpg.de/zagier/" target="_blank">Don Zagier</a></b> 
                 (Max Planck Institute for Mathematics), 
-                <a onclick="toggle_visibility('7');">
-                    <i>What can the Betti numbers of a smooth manifold be?</i></a><br />
-                <div id="7" class="toshow" style="display:none">
-                    TBA
-                </div>
+                    <i>What can the Betti numbers of a smooth manifold be?</i>
             </p>
 
             <p><a id="Y"></a>Dec 6, '21 (Monday, 4:20&ndash;5:10 pm, zoom: 846 6434 3534), 
                 <b><a href="https://www.kurims.kyoto-u.ac.jp/~mayuko/english.html" target="_blank">Mayuko Yamashita</a></b> 
                 (Kyoto University), 
-                <a onclick="toggle_visibility('8');">
+                <a onclick="toggle_visibility('7');">
                     <i>On the absence of all heterotic global anomalies</i></a><br />
-                <div id="8" class="toshow" style="display:none">
+                <div id="7" class="toshow" style="display:none">
                     In this talk, I will explain the work "Topological modular forms and the absence of all heterotic global 
                     anomalies" (<a href="https://arxiv.org/abs/2108.13542" target="_blank">https://arxiv.org/abs/2108.13542</a>) 
                     with Yuji Tachikawa from a mathematical point of view.  That work is aimed at settling a physical problem to 
@@ -237,9 +262,9 @@
             <p>Dec 13&ndash;15 (date TBD), '21 (Goettsche Workshop talk, 5:00&ndash;6:00 pm), 
                 <b><a href="https://people.mpim-bonn.mpg.de/zagier/" target="_blank">Don Zagier</a></b> 
                 (Max Planck Institute for Mathematics), 
-                <a onclick="toggle_visibility('9');">
+                <a onclick="toggle_visibility('8');">
                     <i>Mock modular forms and wall crossing</i></a><br />
-                <div id="9" class="toshow" style="display:none">
+                <div id="8" class="toshow" style="display:none">
                     TBA
                 </div>
             </p>
