--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
                     Garoufalidis in SUSTech. The talk will be at a very general level and
                     will not require any prior knowledge.  In particular, rough
                     explanations of all of the various technical words occurring above will
-                    be given. 
+                    be given. <br />
                     
                     In the Math Center seminar talk that I will give on December 6, I will
                     tell more about one of the specific questions appearing above, namely,
