--- a/index.html
+++ b/index.html
@@ -259,14 +259,11 @@
                 </div>
             </p>
 
-            <p>Dec 13&ndash;15 (date TBD), '21 (Goettsche Workshop talk, 5:00&ndash;6:00 pm), 
+            <p>Dec 13, '21 (Göttsche Workshop talk, 5:00&ndash;6:00 pm, 
+                <a href="https://icm.sustech.edu.cn/" target="_blank">SUSTech International Center for Mathematics</a>), 
                 <b><a href="https://people.mpim-bonn.mpg.de/zagier/" target="_blank">Don Zagier</a></b> 
                 (Max Planck Institute for Mathematics), 
-                <a onclick="toggle_visibility('8');">
-                    <i>Mock modular forms and wall crossing</i></a><br />
-                <div id="8" class="toshow" style="display:none">
-                    TBA
-                </div>
+                    <i>Mock modular forms and wall crossing</i>
             </p>
 
         
