--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
                 </div>
             </p>
 
-            <p>Dec 13, '21 (Göttsche Workshop talk, 5:00&ndash;6:00 pm, 
+            <p>Dec 13, '21 (<a href="https://sites.google.com/view/lothar-gottsche-conference/home" target="_blank">Göttsche Workshop</a> talk, 5:00&ndash;6:00 pm, 
                 <a href="https://icm.sustech.edu.cn/" target="_blank">SUSTech International Center for Mathematics</a>), 
                 <b><a href="https://people.mpim-bonn.mpg.de/zagier/" target="_blank">Don Zagier</a></b> 
                 (Max Planck Institute for Mathematics), 
