--- a/index.html
+++ b/index.html
@@ -263,7 +263,20 @@
                 <a href="https://icm.sustech.edu.cn/" target="_blank">SUSTech International Center for Mathematics</a>), 
                 <b><a href="https://people.mpim-bonn.mpg.de/zagier/" target="_blank">Don Zagier</a></b> 
                 (Max Planck Institute for Mathematics), 
+                <a onclick="toggle_visibility('8');">
                     <i>Mock modular forms and wall crossing</i>
+                <div id="8" class="toshow" style="display:none">
+                    The theory of mock modular forms was created in the 2002 thesis of Sander Zwegers as a generalization of the 
+                    famous "mock theta functions" of Ramanujan, of which Ramanujan had given many examples but no intrinsic 
+                    characterization. One of the approaches given by Zwegers involves the Taylor expansion of meromorphic Jacobi 
+                    forms, which have a "wall-crossing" property as some contour of integration crosses a pole of the function, and 
+                    he noticed that the functions defined some years earlier in a paper by Lothar Göttsche and myself on Donaldson 
+                    invariants of 4-manifolds, which were also based on a wall-crossing property, were in fact examples of mock 
+                    modular forms before either the notion or the term existed. The same wall-crossing property occurred some years 
+                    later in mathematical physics in the study of the string theory of black holes, the explanation there too being 
+                    given by mock modular forms. In the lecture I will try to explain what mock modular forms are and how these 
+                    various properties arise.
+                </div>
             </p>
 
         
