--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
                 <b><a href="https://people.mpim-bonn.mpg.de/zagier/" target="_blank">Don Zagier</a></b> 
                 (Max Planck Institute for Mathematics), 
                 <a onclick="toggle_visibility('8');">
-                    <i>Mock modular forms and wall crossing</i>
+                    <i>Mock modular forms and wall crossing</i></a><br />
                 <div id="8" class="toshow" style="display:none">
                     The theory of mock modular forms was created in the 2002 thesis of Sander Zwegers as a generalization of the 
                     famous "mock theta functions" of Ramanujan, of which Ramanujan had given many examples but no intrinsic 
