--- a/undergrad/index.html
+++ b/undergrad/index.html
@@ -203,7 +203,9 @@
     
     <p>Dec 20, '21,  
         <b>Yunsheng Li</b>,
-        <i>Presheaves and Čech Cohomology</i>
+        <i>Presheaves and Čech Cohomology</i>,
+        <b>Gen Yue</b>,
+        <i>Application of de Rham Cohomology in Physics & Introduction to Topological Phase</i>
     </p>
     
     <p>Dec 27, '21,  
