--- a/undergrad/index.html
+++ b/undergrad/index.html
@@ -194,6 +194,7 @@
     <p>Dec 6, '21,  
         <b>Hao Ouyang</b>,
         <i>The Generalized Mayer-Vietoris Principle (Continue)</i>,
+         <a href="21fal/The Generalized Mayer-Vietoris Principle.pdf" target="_blank">notes</a>
     </p>
     
     <p>Dec 13, '21,  
