--- a/undergrad/index.html
+++ b/undergrad/index.html
@@ -206,12 +206,13 @@
         <b>Yunsheng Li</b>,
         <i>Presheaves and Čech Cohomology</i>,
         <b>Gen Yue</b>,
-        <i>Application of de Rham Cohomology in Physics & Introduction to Topological Phase</i>
+        <i>Introduction to Quantum Mechanics</i>
+         <a href="21fal/Particle on a Ring.pdf" target="_blank">notes on Quantum Mechanics</a>
     </p>
     
     <p>Dec 27, '21,  
         <b>Gen Yue</b>,
-        <i>Application of de Rham Cohomology in Physics & Introduction to Topological Phase</i>
+        <i>Application of de Rham Cohomology in Physics</i>
     </p>
 
 <br /><br /><br />
