--- a/undergrad/index.html
+++ b/undergrad/index.html
@@ -206,7 +206,7 @@
         <b>Yunsheng Li</b>,
         <i>Presheaves and Čech Cohomology</i>,
         <b>Gen Yue</b>,
-        <i>Introduction to Quantum Mechanics</i>
+        <i>Introduction to Quantum Mechanics</i>,
          <a href="21fal/Particle on a Ring.pdf" target="_blank">notes on Quantum Mechanics</a>
     </p>
     
