--- a/undergrad/index.html
+++ b/undergrad/index.html
@@ -212,7 +212,12 @@
     
     <p>Dec 27, '21,  
         <b>Gen Yue</b>,
-        <i>Application of de Rham Cohomology in Physics</i>
+        <i>Introduction to Quantum Mechanics (continue)</i>
+    </p>
+    
+    <p>To be Determined,  
+        <b>Gen Yue</b>,
+        <i>Introduction to Topological Phase and Application of de Rham Cohomology</i>
     </p>
 
 <br /><br /><br />
