--- a/undergrad/index.html
+++ b/undergrad/index.html
@@ -215,7 +215,7 @@
         <i>Introduction to Quantum Mechanics (continue)</i>
     </p>
     
-    <p>To be Determined,  
+    <p>Jan 13, '22,
         <b>Gen Yue</b>,
         <i>Introduction to Topological Phase and Application of de Rham Cohomology</i>
     </p>
