--- a/undergrad/index.html
+++ b/undergrad/index.html
@@ -207,7 +207,7 @@
         <i>Presheaves and Čech Cohomology</i>,
         <b>Gen Yue</b>,
         <i>Introduction to Quantum Mechanics</i>,
-         <a href="21fal/Particle on a Ring.pdf" target="_blank">notes on Quantum Mechanics</a>
+        <a href="21fal/Particle_on_a_Ring.pdf" target="_blank">notes on Quantum Mechanics</a>
     </p>
     
     <p>Dec 27, '21,  
@@ -217,7 +217,8 @@
     
     <p>Jan 13, '22,
         <b>Gen Yue</b>,
-        <i>Introduction to Topological Phase and Application of de Rham Cohomology</i>
+        <i>Introduction to Topological Phase and Application of de Rham Cohomology</i>,
+        <a href="21fal/Geometric_phase_in_physics.pdf" target="_blank">notes on Topological Phase</a>
     </p>
 
 <br /><br /><br />
