--- a/undergrad/21fal/index.html
+++ b/undergrad/21fal/index.html
@@ -63,6 +63,7 @@
 
                     <ul class="header__nav">
                         <li><a href="/index.html" target="_blank">Home</a></li>
+    <li><a href="/undergrad" title="" target="_blank">Current</a></li>
                          <li><a href="/grad" title="" target="_blank">Graduate Seminar</a></li>
     <li><a href="21spr" title="" target="_blank">Spring 2021</a></li>
     
