--- a/acts/index.html
+++ b/acts/index.html
@@ -139,6 +139,24 @@
             <p>Our focus in Spring 2021 is recent research with specific applications as well as further theoretical aspects.</p>
 
 
+    
+
+<h3><a id="T"></a>Talks in Spring 2022 (mostly Mondays 8&ndash;10 in Tencent Meeting 730-7782-4255)</h3>
+
+            <p>Mar 14, '22, 
+                <b>Siheng Yi</b>, 
+                <a onclick="toggle_visibility('17');">
+                    <i>Persistent Homology, Sliding Window Embedding and Time Series</i></a><br />
+                <div id="17" class="toshow" style="display:none">
+                    <li><a href="20-21/Yi22_Slides_1.pdf" target="_blank">Slides</a></li>
+                    <li>Jose A. Perea, <a href="https://www.ams.org/journals/notices/201905/rnoti-p686.pdf" target="_blank">Topological time series analysis</a></li>
+                    <li>Saba Emrani, Thanos Gentimis, and Hamid Krim, <a href="https://ieeexplore.ieee.org/document/6737251" target="_blank">
+                        Persistent homology of delay embeddings and its application to wheeze detection</a></li>
+                </div>
+            </p>
+
+
+
 <h3><a id="T"></a>Talks in Spring 2021 (mostly Mondays 9&ndash;12 in Huiyuan 3-415)</h3>
 
             <p>Jan 12, '21, 
