--- a/acts/index.html
+++ b/acts/index.html
@@ -137,7 +137,10 @@
                 as well as English proficiency.  For student participants, we encourage you to informally discuss the 
                 material with faculty participants prior to your presentations.</p>
     
-            <p>Our focus in Spring 2021 is recent research with specific applications as well as further theoretical aspects.</p>
+            <p>This is a continuation of last year's <a href="20-21" title="" target="_blank">seminar</a>, though we 
+                try to make it self-contained by starting mildly with overview and background materials.
+                Our focus is the theory and applications of topological methods in analyzing time-dependent data, 
+                with a goal of continuing with hands-on experiments with such through examples.</p>
 
 
     
