--- a/acts/index.html
+++ b/acts/index.html
@@ -140,7 +140,7 @@
             <p>This is a continuation of last year's <a href="20-21" title="" target="_blank">seminar</a>, though we 
                 try to make it self-contained by starting mildly with overview and background materials.
                 Our focus is the theory and applications of topological methods in analyzing time-dependent data, 
-                with a goal of continuing with hands-on experiments with such through examples.</p>
+                with a specific goal of continuing with hands-on experiments with audio signal processing.</p>
 
 
     
