--- a/acts/index.html
+++ b/acts/index.html
@@ -231,7 +231,7 @@
                     <div class="s-footer__copyright">
                         <span>© Copyright Philosophy 2022</span> 
                         <span>Site Template by <a href="https://colorlib.com/">Colorlib</a></span>
-                        <span>Picture adapted from Wikimedia Commons</span>
+                        <span>Picture by Siheng Yi for vowel/consonant detection using Adobe Audition</span>
                     </div>
 
                     <div class="go-top">
