--- a/acts/index.html
+++ b/acts/index.html
@@ -140,33 +140,34 @@
                 <a onclick="toggle_visibility('1');">
                     <i>Persistent Homology, Sliding Window Embedding and Time Series</i></a><br />
                 <div id="1" class="toshow" style="display:none">
-                    <li><a href="21-22/Yi.pdf" target="_blank">Slides</a></li>
+                    <li><a href="21-22/Slides_Yi_20220314.pdf" target="_blank">Slides</a></li>
                     <li>Jose A. Perea, <a href="https://www.ams.org/journals/notices/201905/rnoti-p686.pdf" target="_blank">Topological time series analysis</a></li>
                     <li>Saba Emrani, Thanos Gentimis, and Hamid Krim, <a href="https://ieeexplore.ieee.org/document/6737251" target="_blank">
                         Persistent homology of delay embeddings and its application to wheeze detection</a></li>
                 </div>
             </p>
 
-<p>Mar 21, '22, 
+            <p>Mar 21, '22, 
                 <b>Zhiwang Yu</b>, 
                 <a onclick="toggle_visibility('2');">
-                    <i></i></a><br />
+                    <i>Vietoris-Rips Complexes and Cech Complex</i></a><br />
                 <div id="2" class="toshow" style="display:none">
-                    
+                    <li>Jose A. Perea, <a href="https://www.ams.org/journals/notices/201905/rnoti-p686.pdf" target="_blank">Topological time series analysis</a></li>
                 </div>
             </p>
 
-<p>Mar 28, '22, 
+            <p>Mar 28, '22, 
                 <b>Pingyao Feng</b>, 
                 <a onclick="toggle_visibility('3');">
-                    <i></i></a><br />
+                    <i>Persistent Homology and Musical Audio Data</i></a><br />
                 <div id="3" class="toshow" style="display:none">
-                    
+                    <li><a href="21-22/Notes_Feng_20220328.pdf" target="_blank">Notes</a></li>
+                    <li>Jose A. Perea, <a href="https://www.tandfonline.com/doi/full/10.1080/17459737.2013.850597" target="_blank">Topology of musical data</a></li>
                 </div>
             </p>
 
-<p>Apr 11, '22, 
-                <b>Siheng Yi</b>, 
+            <p>Apr 11, '22, 
+                <b>Yifan Chen</b>, 
                 <a onclick="toggle_visibility('4');">
                     <i></i></a><br />
                 <div id="4" class="toshow" style="display:none">
