--- a/acts/index.html
+++ b/acts/index.html
@@ -152,7 +152,7 @@
                 <a onclick="toggle_visibility('2');">
                     <i>Vietoris-Rips Complexes and Cech Complex</i></a><br />
                 <div id="2" class="toshow" style="display:none">
-                    <li>Jose A. Perea, <a href="https://www.ams.org/journals/notices/201905/rnoti-p686.pdf" target="_blank">Topological time series analysis</a></li>
+                    <li>Gunnar Carlsson, <a href="https://www.ams.org/journals/bull/2009-46-02/S0273-0979-09-01249-X/home.html" target="_blank">Topology and data</a></li>
                 </div>
             </p>
 
@@ -162,7 +162,7 @@
                     <i>Persistent Homology and Musical Audio Data</i></a><br />
                 <div id="3" class="toshow" style="display:none">
                     <li><a href="21-22/Notes_Feng_20220328.pdf" target="_blank">Notes</a></li>
-                    <li>Jose A. Perea, <a href="https://www.tandfonline.com/doi/full/10.1080/17459737.2013.850597" target="_blank">Topology of musical data</a></li>
+                    <li>William A. Sethares & Ryan Budney, <a href="https://www.tandfonline.com/doi/full/10.1080/17459737.2013.850597" target="_blank">Topology of musical data</a></li>
                 </div>
             </p>
 
