--- a/acts/index.html
+++ b/acts/index.html
@@ -172,7 +172,7 @@
                     <i>A Short Introduction on Topological Machine Learning Methods</i></a><br />
                 <div id="4" class="toshow" style="display:none">
                     <li><a href="21-22/Notes_Chen_20220411.pdf" target="_blank">Notes</a></li>
-                    <li>Felix Hensel, Michael Moor, and Bastian Rieck, <a href="https://www.frontiersin.org/articles/10.3389/frai.2021.681108/full" target="_blank">Topology of musical data</a></li>
+                    <li>Felix Hensel, Michael Moor, and Bastian Rieck, <a href="https://www.frontiersin.org/articles/10.3389/frai.2021.681108/full" target="_blank">A Survey of Topological Machine Learning Methods</a></li>
                 </div>
             </p>
 
@@ -182,7 +182,7 @@
                     <i>Algebraic Topology and Database</i></a><br />
                 <div id="5" class="toshow" style="display:none">
                     <li><a href="21-22/Notes_Yi_20220418.pdf" target="_blank">Notes</a></li>
-                    <li>Smith Abraham D. ; Bendich Paul; Harer John, <a href="https://www.ams.org/journals/btran/2021-08-01/S2330-0000-2021-00056-4/" target="_blank">Topology of musical data</a></li>
+                    <li>Smith Abraham D. ; Bendich Paul; Harer John, <a href="https://www.ams.org/journals/btran/2021-08-01/S2330-0000-2021-00056-4/" target="_blank">Persistent obstruction theory for a model category of measures with applications to data merging</a></li>
                 </div>
             </p>
 
