--- a/acts/index.html
+++ b/acts/index.html
@@ -224,6 +224,15 @@
                     <li>Chengyuan Wu and Carol Anne Hargreaves, <a href="https://arxiv.org/abs/1911.12082" target="_blank">Topological Machine Learning for Multivariate Time Series</a></li>
                 </div>
             </p>
+
+            <p>May 23, '22, 
+                <b>Zhiwang Yu</b>, 
+                <a onclick="toggle_visibility('10');">
+                    <i>Computing persistent Stiefel–Whitney classes of line bundles 2</i></a><br />
+                <div id="5" class="toshow" style="display:none">
+                    <li>Raphaël Tinarrage, <a href="https://link.springer.com/10.1007/s41468-021-00080-4" target="_blank">Computing persistent Stiefel-Whitney classes of line bundles</a></li>
+                </div>
+            </p>
         
         
         <!--
