--- a/acts/index.html
+++ b/acts/index.html
@@ -244,6 +244,20 @@
             </p>
 
 
+<h3><a id="T"></a>Talks in Summer 2022 (mostly Mondays 14&ndash;16 in Tencent Meeting 510-6344-5300)</h3>
+
+            <p>July 4, '22, 
+                <b>Cunshi Wang</b>, 
+                <a onclick="toggle_visibility('1');">
+                    <i>Structure of Astronomical Data </i></a><br />
+                <div id="1" class="toshow" style="display:none">
+                    <li><a href="21-22/Sildes_Wang_20220704.pdf" target="_blank">Slides</a></li>
+                </div>
+            </p>
+
+
+
+
 
         <!--
 <h3><a id="R"></a>References</h3>
