--- a/acts/index.html
+++ b/acts/index.html
@@ -248,13 +248,22 @@
 
             <p>July 4, '22, 
                 <b>Cunshi Wang</b>, 
-                <a onclick="toggle_visibility('1');">
+                <a onclick="toggle_visibility('12');">
                     <i>Structure of Astronomical Data </i></a><br />
-                <div id="1" class="toshow" style="display:none">
+                <div id="12" class="toshow" style="display:none">
                     <li><a href="21-22/Sildes_Wang_20220704.pdf" target="_blank">Slides</a></li>
                 </div>
             </p>
 
+            <p>May 4, '22, 
+                <b>Siheng Yi</b>, 
+                <a onclick="toggle_visibility('1');">
+                    <i>Algebraic Topology and Database 3</i></a><br />
+                <div id="1" class="toshow" style="display:none">
+                    <li><a href="21-22/Notes_Yi_20220418.pdf" target="_blank">Notes</a></li>
+                    <li>Smith Abraham D. ; Bendich Paul; Harer John, <a href="https://www.ams.org/journals/btran/2021-08-01/S2330-0000-2021-00056-4/" target="_blank">Persistent obstruction theory for a model category of measures with applications to data merging</a></li>
+                </div>
+            </p>
 
 
 
