--- a/acts/index.html
+++ b/acts/index.html
@@ -255,6 +255,17 @@
                 </div>
             </p>
 
+            <p>July 11, '22, 
+                <b>Siheng Yi</b>, 
+                <a onclick="toggle_visibility('13');">
+                    <i>Theoretical Basis of Sliding Window Embedding </i></a><br />
+                <div id="13" class="toshow" style="display:none">
+                    <li>Floris Takens, <a href="https://mathscinet.ams.org/mathscinet-getitem?mr=654900" target="_blank">Detecting strange attractors in turbulence</a></li>
+                    <li>Perea, Jose A. ; Harer, John , <a href="https://mathscinet.ams.org/mathscinet-getitem?mr=654900" target="_blank">Sliding Windows and Persistence: An Application of Topological Methods to Signal Analysis</a></li>
+                    <li><a href="21-22/Sildes_Yi_202207011.pdf" target="_blank">Slides</a></li>
+                </div>
+            </p>
+
 
 
 
