--- a/acts/index.html
+++ b/acts/index.html
@@ -251,7 +251,7 @@
                 <a onclick="toggle_visibility('12');">
                     <i>Structure of Astronomical Data </i></a><br />
                 <div id="12" class="toshow" style="display:none">
-                    <li><a href="21-22/Slides_Wang_20220704.pdf" target="_blank">Slides</a></li>
+                    <li><a href="21-22/Slides_Wang_20220704.pptx" target="_blank">Slides</a></li>
                 </div>
             </p>
 
