--- a/acts/index.html
+++ b/acts/index.html
@@ -133,7 +133,7 @@
 
 <h3><a id="T"></a>Talks in Summer 2022 (mostly Mondays 2&ndash;4 in Tencent Meeting 510-6344-5300)</h3>
 
-            <p>July 4, '22, 
+            <p>Jul 4, '22, 
                 <b>Cunshi Wang</b>, 
                 <a onclick="toggle_visibility('12');">
                     <i>Structure of Astronomical Data </i></a><br />
@@ -142,18 +142,18 @@
                 </div>
             </p>
 
-            <p>July 11, '22, 
+            <p>Jul 11, '22, 
                 <b>Siheng Yi</b>, 
                 <a onclick="toggle_visibility('13');">
                     <i>Theoretical Basis of Sliding Window Embedding </i></a><br />
                 <div id="13" class="toshow" style="display:none">
                     <li>Floris Takens, <a href="https://mathscinet.ams.org/mathscinet-getitem?mr=654900" target="_blank">Detecting strange attractors in turbulence</a></li>
-                    <li>Perea, Jose A. ; Harer, John , <a href="https://mathscinet.ams.org/mathscinet-getitem?mr=3348174" target="_blank">Sliding Windows and Persistence: An Application of Topological Methods to Signal Analysis</a></li>
+                    <li>Jose A. Perea, John Harer, <a href="https://mathscinet.ams.org/mathscinet-getitem?mr=3348174" target="_blank">Sliding Windows and Persistence: An Application of Topological Methods to Signal Analysis</a></li>
                     <li><a href="21-22/Slides_Yi_20220711.pdf" target="_blank">Slides</a></li>
                 </div>
             </p>
 
-            <p>July 18, '22, 
+            <p>Jul 18, '22, 
                 <b>Siheng Yi</b>, 
                 <a onclick="toggle_visibility('14');">
                     <i></i></a><br />
@@ -162,7 +162,7 @@
                 </div>
             </p>
 
-            <p>August 8, '22 (tentative), 
+            <p>Aug 8, '22 (tentative), 
                 <b>Meng Yu</b>, 
                 <a onclick="toggle_visibility('15');">
                     <i></i></a><br />
