--- a/acts/index.html
+++ b/acts/index.html
@@ -156,9 +156,9 @@
             <p>Jul 18, '22, 
                 <b>Siheng Yi</b>, 
                 <a onclick="toggle_visibility('14');">
-                    <i></i></a><br />
+                    <i>Progress Report and Specific Operation of GUDHI</i></a><br />
                 <div id="14" class="toshow" style="display:none">
-                    
+                    <li><a href="21-22/Notes_Yi_20220718.pdf" target="_blank">Notes</a></li>
                 </div>
             </p>
 
@@ -282,10 +282,6 @@
                     <li>Raphaël Tinarrage, <a href="https://link.springer.com/10.1007/s41468-021-00080-4" target="_blank">Computing persistent Stiefel-Whitney classes of line bundles</a></li>
                 </div>
             </p>
-
-
-
-
 
 
         <!--
