--- a/acts/index.html
+++ b/acts/index.html
@@ -162,11 +162,20 @@
                 </div>
             </p>
 
+            <p>Aug 1, '22, 
+                <b>Xiabing Ruan</b>, 
+                <a onclick="toggle_visibility('15');">
+                    <i>TBA</i></a><br />
+                <div id="15" class="toshow" style="display:none">
+                    
+                </div>
+            </p>
+
             <p>Aug 8, '22 (tentative), 
                 <b>Meng Yu</b>, 
-                <a onclick="toggle_visibility('15');">
+                <a onclick="toggle_visibility('16');">
                     <i></i></a><br />
-                <div id="15" class="toshow" style="display:none">
+                <div id="16" class="toshow" style="display:none">
                     
                 </div>
             </p>
