--- a/grad/index.html
+++ b/grad/index.html
@@ -124,13 +124,23 @@
 
             <p>This is a graduate-level seminar on algebraic and geometric topology.  
                Topics are selected from common interests of the participants.</p>
-            
-            
+
+
+
 
 
 <h3><a id="T"></a>Talks (mostly Mondays 4:30&ndash;5:30 in Yidan 307)</h3>
 
-            <p>Apr 19, '21, 
+            <p>Jul 28, '22 (4:00–5:00 pm, M714),
+                <b>Kecheng Shi</b>, 
+                <a onclick="toggle_visibility('8');">
+                    <i>Reciprocity and isogeny-based cryptography</i></a><br />
+                <div id="8" class="toshow" style="display:none">
+                    This informal talk consists of two relatively independent parts. In the first part, I will talk about my interest in reciprocity. Most of this part is based on Frank Calegari’s talk “30 years of modularity” at the ICM 2022. I will start with Diophantine equations, giving some simple examples of their relationship to other mathematical objects such as L-functions and modular forms, and explain some related progress in number theory. In the second part, I would like to introduce some of the mathematical background of isogeny-based cryptography, on which I intend to work in the future.
+                </div>
+            </p>
+
+        <p>Apr 19, '21, 
                 <b>Tongtong Liang</b>, 
                 <a onclick="toggle_visibility('1');">
                     <i>Homotopy coherence problem and ∞-categories</i></a><br />
