--- a/grad/index.html
+++ b/grad/index.html
@@ -131,7 +131,7 @@
 
 <h3><a id="T"></a>Talks (mostly Mondays 4:30&ndash;5:30 in Yidan 307)</h3>
 
-            <p>Jul 28, '22 (4–5 pm, M714),
+            <p>Jul 28, '22 (4–5, M714),
                 <b>Kecheng Shi</b>, 
                 <a onclick="toggle_visibility('8');">
                     <i>Reciprocity and isogeny-based cryptography</i></a><br />
