--- a/grad/index.html
+++ b/grad/index.html
@@ -136,8 +136,11 @@
                 <a onclick="toggle_visibility('8');">
                     <i>Reciprocity and isogeny-based cryptography</i></a><br />
                 <div id="8" class="toshow" style="display:none">
-                    This informal talk consists of two relatively independent parts. In the first part, I will talk about my interest in reciprocity. Most of this part is based on Frank Calegari’s talk “30 years of modularity” at the ICM 2022. I will start with Diophantine equations, giving some simple examples of their relationship to other mathematical objects such as L-functions and modular forms, and explain some related progress in number theory. In the second part, I would like to introduce some of the mathematical background of isogeny-based cryptography, on which I intend to work in the future.
-                </div>
+                    <li>This informal talk consists of two relatively independent parts. In the first part, I will talk about my interest in reciprocity. Most of this part is based on Frank Calegari’s talk “30 years of modularity” at the ICM 2022. I will start with Diophantine equations, giving some simple examples of their relationship to other mathematical objects such as L-functions and modular forms, and explain some related progress in number theory. In the second part, I would like to introduce some of the mathematical background of isogeny-based cryptography, on which I intend to work in the future.</li>
+                    <li><a href="22sum/ECC.pdf" target="_blank">Slides</a></li>
+                    <li>Frank Calegari, <a href="22sum/Survey.pdf" target="_blank">Reciprocity in the Langlands program since Fermat's last theorem</a></li>
+                    <li>Luca De Feo, <a href="22sum/Isogeny-based cryptography.pdf" target="_blank">Mathematics of isogeny based cryptography</a></li>
+    </div>
             </p>
 
         <p>Apr 19, '21, 
