--- a/grad/index.html
+++ b/grad/index.html
@@ -131,6 +131,16 @@
 
 <h3><a id="T"></a>Talks (mostly Mondays 4:30&ndash;5:30 in Yidan 307)</h3>
 
+            <p>Jul 25, '22 (2:30–3:30, M2002),
+                <b>Xuecai Ma</b>, 
+                <a href="22sum/mxc.pdf" target="_blank"><i>Methods of spectral algebraic geometry in chromatic homotopy theory</i></a>
+            </p>
+
+            <p>Jul 25, '22 (3:30–4:30, M2002),
+                <b>Tongtong Liang</b>, 
+                <a href="22sum/ltt.pdf" target="_blank"><i>Methods of homotopy theory in algebraic geometry from the viewpoint of cohomology operations</i></a>
+            </p>
+
             <p>Jul 28, '22 (4–5, M714),
                 <b>Kecheng Shi</b>, 
                 <a onclick="toggle_visibility('8');">
