--- a/acts/index.html
+++ b/acts/index.html
@@ -134,7 +134,7 @@
 <h3><a id="T"></a>Talks in Summer 2022 (mostly Mondays 2&ndash;4 in Tencent Meeting 510-6344-5300)</h3>
 
             <p>Jul 4, '22, 
-                <b>Cunshi Wang</b>, 
+                <b>Cunshi Wang</b> (Chinese Academy of Sciences), 
                 <a onclick="toggle_visibility('12');">
                     <i>Structure of Astronomical Data </i></a><br />
                 <div id="12" class="toshow" style="display:none">
@@ -163,19 +163,32 @@
             </p>
 
             <p>Aug 1, '22, 
-                <b>Xiabing Ruan</b>, 
+                <b>Xiabing Ruan (University of Paris-Saclay)</b>, 
                 <a onclick="toggle_visibility('15');">
-                    <i>TBA</i></a><br />
+                    <i>Interleaving distance between persistent objects</i></a><br />
                 <div id="15" class="toshow" style="display:none">
-                    
+                    <li>Grégory Ginot, Johan Leray, <a href="https://arxiv.org/abs/1905.12307" target="_blank">Multiplicative persistent distances</a></li>
+                    <li><a href="21-22/Slides_Ruan_20220801.pdf" target="_blank">Slides</a></li>
                 </div>
             </p>
 
             <p>Aug 8, '22 (tentative), 
-                <b>Meng Yu</b>, 
+                <b>Siheng Yi</b>, 
                 <a onclick="toggle_visibility('16');">
-                    <i></i></a><br />
+                    <i>Multi-parameter persistence</i></a><br />
                 <div id="16" class="toshow" style="display:none">
+                    <li>Gunnar Carlsson, Afra Zomorodian, <a href="https://doi.org/10.1007/s00454-009-9176-0" target="_blank">The theory of multidimensional persistence</a></li>
+                    <li>Andrew J. Blumberg, Michael Lesnick, <a href="https://arxiv.org/abs/2010.09628" target="_blank">Stability of 2-parameter persistent homology</a></li>
+                    <li>Wanying Bi, Jingyan Li, Jian Liu, Jie Wu, <a href="https://arxiv.org/abs/2205.10796" target="_blank">On the Cayley-persistence algebra</a></li>
+   
+                </div>
+            </p>
+
+            <p>Aug 15 / 29, '22 (tentative), 
+                <b>Meng Yu</b> (Tecent AI Lab), 
+                <a onclick="toggle_visibility('17');">
+                    <i>TBA</i></a><br />
+                <div id="17" class="toshow" style="display:none">
                     
                 </div>
             </p>
