--- a/acts/index.html
+++ b/acts/index.html
@@ -163,9 +163,9 @@
             </p>
 
             <p>Aug 1, '22, 
-                <b>Xiabing Ruan (University of Paris-Saclay)</b>, 
+                <b>Xiabing Ruan</b> (University of Paris-Saclay), 
                 <a onclick="toggle_visibility('15');">
-                    <i>Interleaving distance between persistent objects</i></a><br />
+                    <i>Interleaving distances and multiplicative structures of persistent objects</i></a><br />
                 <div id="15" class="toshow" style="display:none">
                     <li>Grégory Ginot, Johan Leray, <a href="https://arxiv.org/abs/1905.12307" target="_blank">Multiplicative persistent distances</a></li>
                     <li><a href="21-22/Slides_Ruan_20220801.pdf" target="_blank">Slides</a></li>
