--- a/acts/index.html
+++ b/acts/index.html
@@ -185,11 +185,20 @@
                 </div>
             </p>
 
-            <p>Aug 15 / 29, '22 (tentative), 
-                <b>Meng Yu</b> (Tecent AI Lab), 
+            <p>Aug 15, '22, 
+                <b>Siheng Yi</b>, 
                 <a onclick="toggle_visibility('17');">
-                    <i>TBA</i></a><br />
+                    <i>Multi-parameter persistence, cont'd</i></a><br />
                 <div id="17" class="toshow" style="display:none">
+                    
+                </div>
+            </p>
+
+            <p>Aug 29, '22, 
+                <b>Meng Yu</b> (Tecent AI Lab), 
+                <a onclick="toggle_visibility('18');">
+                    <i>TBA</i></a><br />
+                <div id="18" class="toshow" style="display:none">
                     
                 </div>
             </p>
