--- a/acts/index.html
+++ b/acts/index.html
@@ -178,8 +178,9 @@
                 <a onclick="toggle_visibility('16');">
                     <i>Multi-parameter persistence</i></a><br />
                 <div id="16" class="toshow" style="display:none">
+                    <li><a href="21-22/Notes_Yi_20220808.pdf" target="_blank">Notes</a></li>
                     <li>Gunnar Carlsson, Afra Zomorodian, <a href="https://doi.org/10.1007/s00454-009-9176-0" target="_blank">The theory of multidimensional persistence</a></li>
-                    <li>Andrew J. Blumberg, Michael Lesnick, <a href="https://arxiv.org/abs/2010.09628" target="_blank">Stability of 2-parameter persistent homology</a></li>
+                    <li>Zomorodian Afra; Carlsson Gunnar, <a href="https://link.springer.com/article/10.1007/s00454-004-1146-y" target="_blank">Computing Persistent Homology</a></li>
                     <li>Wanying Bi, Jingyan Li, Jian Liu, Jie Wu, <a href="https://arxiv.org/abs/2205.10796" target="_blank">On the Cayley-persistence algebra</a></li>
    
                 </div>
@@ -190,7 +191,7 @@
                 <a onclick="toggle_visibility('17');">
                     <i>Multi-parameter persistence, cont'd</i></a><br />
                 <div id="17" class="toshow" style="display:none">
-                    
+                    <li><a href="21-22/Notes_Yi_20220815.pdf" target="_blank">Notes</a></li>
                 </div>
             </p>
 
