--- a/acts/index.html
+++ b/acts/index.html
@@ -186,9 +186,18 @@
                 </div>
             </p>
 
-            <p>Aug 15, '22, 
-                <b>Siheng Yi</b>, 
+            <p>Aug 17, '22 (Special time and place: 2 pm M616), 
+                <b>All joint with Prof. Zhen Zhang's group</b>, 
                 <a onclick="toggle_visibility('17');">
+                    <i>A &ldquo;digression&rdquo;: periodic video data</i></a><br />
+                <div id="17" class="toshow" style="display:none">
+                    
+                </div>
+            </p>
+
+            <p>Aug 22, '22, 
+                <b>Siheng Yi</b>, 
+                <a onclick="toggle_visibility('18');">
                     <i>Multi-parameter persistence, cont'd</i></a><br />
                 <div id="17" class="toshow" style="display:none">
                     <li><a href="21-22/Notes_Yi_20220815.pdf" target="_blank">Notes</a></li>
@@ -197,7 +206,7 @@
 
             <p>Aug 29, '22, 
                 <b>Meng Yu</b> (Tecent AI Lab), 
-                <a onclick="toggle_visibility('18');">
+                <a onclick="toggle_visibility('19');">
                     <i>TBA</i></a><br />
                 <div id="18" class="toshow" style="display:none">
                     
